--- a/nbproject/project.properties
+++ b/nbproject/project.properties
@@ -22,7 +22,7 @@ debug.test.classpath=\
     ${run.test.classpath}
 # This directory is removed when the project is cleaned:
 dist.dir=dist
-dist.jar=${dist.dir}/MVCAndObserver.jar
+dist.jar=${dist.dir}/13._Patrones_de_dise_o_MVC_y_Observer.jar
 dist.javadoc.dir=${dist.dir}/javadoc
 excludes=
 includes=**
